--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Lumen
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:4/BvoMQN/JcnYThNzSxMV6OArP+3jxJ8IMsgkM8HSbw=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_TIMEZONE=UTC
@@ -11,9 +11,28 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=test-lumen
+DB_USERNAME=root
+DB_PASSWORD=admin
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+CEPH_BASE_URL=https://oss.mtg.com.mm
+CEPH_ACCESS_KEY=KXLT9ELLYUAK0A03KAEN
+CEPH_SECRET_KEY=yRwcQBwuWmzUjSKmEbBxoA5A6AFDuTtLL02Ffb1w
+CEPH_BUCKET=mtg-bucket-001
+CEPH_VERSION=latest
+CEPH_ACL=private
+CEPH_VISIBILITY=private
+
+MINIO_ENDPOINT=http://192.168.0.139:9090
+MINIO_ACCESS_KEY=Z0pAUUfMK6oKwkkEQJ8m
+MINIO_SECRET_KEY=7pkfcAhEHQBfb4iNh3qbC2ZQRq7N3Dm2B8k7m81w
+MINIO_REGION=
+MINIO_BUCKET=test
+
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
+
+
